# VK-TechnoPark

./: .travis.yml  CMakeLists.txt  README.md
ADVANCED_C_CPP_IZ1/: CMakeLists.txt
ADVANCED_C_CPP_IZ1/project/src/: ListOperationIO.c
ADVANCED_C_CPP_IZ1/project/testing/: CMakeLists.txt
ADVANCED_C_CPP_IZ1/project/testing/data/case4/: in.txt
ADVANCED_C_CPP_IZ1/project/testing/include/: utils.h
ADVANCED_C_CPP_IZ1/project/testing/src/: managements_tests.cpp
Project/include/: ListControl.h
Project/source/: ListControl.c  ListOperation.c  main.c
Project/test/: CMakeLists.txt
Project/test/data/case1/: out.txt
Project/test/data/case3/: in.txt  out.txt
Project/test/data/case4/: out.txt
Project/test/include/: utils.h
Project/test/src/: io_tests.cpp  managements_tests.cpp  utils.cpp
ci/: install.sh  run.sh
project/include/: ListOperationIO.h
project/src/: ListControl.c  main.c
project/testing/data/case1/: in.txt
project/testing/data/case2/: in.txt  out.txt
project/testing/src/: io_tests.cpp  main.cpp  utils.cpp
